fixed issue w hamburger menu not showing up

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <h5 class="subheading">Race to the Krusty Krab</h5>
 
                     <p>
-                        I created a simple 2-player racing game with HTML, CSS, and vanilla JavaScript. Users can move their boat mobiles using the keys on the keyboard. Avoid crashing the other boatmobiles before the timer hits 0!
+                        A simple 2-player racing game made with HTML, CSS, and vanilla JavaScript where users must avoid crashing the other boatmobiles before the timer hits 0!
                     </p>
                     
                     <a href="/racingGame.html" class="see-more-btn">See More</a>
@@ -177,6 +177,7 @@
                     <a class="see-more-btn">Coming Soon!</a>
                     <p class="subheading media"><em>Desktop Only</em></p>
                 </div>
+<!-- ============================================================= -->
             </div>
         </section>  
 
