--- a/inventoryapp.html
+++ b/inventoryapp.html
@@ -46,9 +46,19 @@
             <a href="https://restaurant-inventory-manager.herokuapp.com/" target="_blank">View App</a>
         </div>
         <br>
-        <h5>Description</h5>
-        <p>The idea behind this app stems from my current job as a restaurant manager/administrator for a small ramen restaurant. Often when working with the floor manager on my team, I've notice how inefficient it is to use a Google spreadsheet to keep track of inventory on a weekly basis. There are endless rows and columns of items and he is consantly scrolling and resizing the spreadsheet to see each item. Also, the floor manager often complains of how difficult it is to pinpoint which items are running low and when it's time to restock certain items. I wanted to create a simple, user-friendly application that would make the entire inventory process much more streamlined for small business managers like him.
-        <h5>Technologies Used</h5>
+        <h5 class="subheading">Inspiration</h5>
+        <p>
+            From my experience of working in the restaurant industry, I've noticed the headache and frustration that my colleagues often face when doing inventory every week: 
+        </p>
+        <p>
+            Tiny rows and columns listing dozens of items printed on a wrinkly sheet of paper and slapped onto a clipboard.  
+        </p>
+        <p>
+            Knowing there had to be a way to make this process less painful, I created this simple application to streamline the inventory process.
+        </p>
+
+
+        <h5 class="subheading">Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML/CSS/JavaScript</li>
@@ -61,7 +71,7 @@
         <br>
         <!-- <h4>Challenges</h4> -->
         <!-- <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p> -->
-        <h5>Preview</h5>
+        <h5 class="subheading">Preview</h5>
         <div class="screenshots">
             <img src="/images/inv1.png" alt="log in page">
             <img src="/images/inv2.png" alt="dashboard">
