--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,12 @@
             <a href="https://christinalu.me/" target="_blank">View Live Site</a>
         </div>
         <br> 
-        <h5>Description</h5>
+        <h5 class="subheading">Description</h5>
         <p>
             The countless iterations of this site tells the story of my progression in web development. I will constantly be striving to improve this site as I continue to learn new skills and technologies.
         </p>
         
-        <h5>Technologies Used</h5>
+        <h5 class="subheading">Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML</li>
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <br>
-        <h5>Challenges</h5>
+        <h5 class="subheading">Challenges</h5>
         <p>
             As the first website I've ever built from scratch, the current state of my portfolio has gone through many iterations in themes and layouts.
         </p>
