--- a/racingGame.html
+++ b/racingGame.html
@@ -45,10 +45,10 @@
             <a href="https://christinalu.me/race-to-the-krusty-krab/" target="_blank">Play Game</a>
         </div>
         <br>
-        <h5>Description</h5>
+        <h5 class="subheading">Description</h5>
         <p>In this project, I used plain vanilla JavaScript and DOM manipulation to allow the user interact with elements in the game. This 2-player racing game allows two people to use the 'WASD' and arrow keys to navigate the patty wagons around the enemy boat mobiles.</p>
 
-        <h5>Technologies Used</h5>
+        <h5 class="subheading">Technologies Used</h5>
         <div class="skills-list">
             <ul>
                 <li>HTML</li>
@@ -59,9 +59,9 @@
             </ul>
         </div>
         <br>
-        <h5>Challenges</h5>
+        <h5 class="subheading">Challenges</h5>
         <p>I implemented <span style="font-family:'Courier New', Courier, monospace; font-weight:600">.getBoundingClientRect()</span> to check for collisions. It was tricky figuring out the conditions for each side of the patty wagon and determining how these would trigger the game to end for that player.</p>
-        <h5>Preview</h5>
+        <h5 class="subheading">Preview</h5>
         <div class="screenshots">
             <img src="/images/kk1.png" alt="home page of racing game">
             <img src="/images/kk2.png" alt="select difficult screen">
