change nav hover to underline

--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                 <h4 class="subheading">Skills</h4>
                 <div class="skills-list">
                     <div>
-                        <h5 class="subheading">Programming Languages<h5>  
+                        <h5 class="subheading">Programming Languages</h5>  
                             <p style="font-size: 1rem">JavaScript | HTML | CSS | Python | MATLAB | EJS</p>
                     </div>
                     <div>
-                        <h5 class="subheading">Libraries & Frameworks<h5>  
+                        <h5 class="subheading">Libraries & Frameworks</h5>  
                             <p style="font-size: 1rem">NPM | Node.js | Express | Mongoose | Bootrap | Flask</p>
                     </div>
                     <div>
-                        <h5 class="subheading">Other Technologies<h5>                       
+                        <h5 class="subheading">Other Technologies</h5>                       
                             <p style="font-size: 1rem">MongoDB | Git/Github | DOM Manipulation | MySQL | VS Code | CodePen | Chrome DevTools | Heroku | Figma | Canva</p>
                     </div>    
                 </div>
