update about me bio

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <p>My name is Christina, and I'm a full stack developer who enjoys creating beautiful and functional experiences from scratch.</p> 
 
                 <h5 class='subheading'>How I got here</h5>
-                <p>My passion for web dev started when I was asked to maintain the website of a law firm I used to work at. Watching the ideas in my mind come to life in the browser is like magic to me - I never got sick of it.</p>
+                <p>My passion for web development began when I was asked to maintain the website of a law firm I used to work at. Watching the ideas in my mind come to life in the browser was like magic to me, and I never got sick of it.</p>
                 <h5 class='subheading'>What am I up to?</h5>
                 <p>I am currently a coding bootcamp student on track to graduate in November of 2022. By then, I will have accumulated over 450 hours of coding experience and knowledge on product development fundamentals, object-oriented programming, MVC frameworks, data modeling, and team collaboration strategies. </p>
 
